# TopoDB

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  FORMAT.md  LICENSE-MIT  README.md  dist-workspace.toml
.claude-plugin/: marketplace.json
.github/workflows/: bindings.yml  ci.yml  release.yml
crates/topodb/: Cargo.toml  LICENSE-APACHE  README.md
crates/topodb-cli/: Cargo.toml  README.md
crates/topodb-cli/src/: cli.rs  main.rs  output.rs
crates/topodb-cli/tests/: cli.rs
crates/topodb-json/: Cargo.toml  README.md
crates/topodb-json/src/: batch.rs  compose.rs  lib.rs  retry.rs
crates/topodb-json/tests/: compose.rs  retry.rs
crates/topodb-mcp/: Cargo.toml  README.md
crates/topodb-mcp/src/: config.rs  convert.rs  embedder.rs  main.rs  ort_fetch.rs  server.rs
crates/topodb-mcp/tests/: aliases.rs  bin_args.rs  e2e.rs  embeddings.rs  memory_consolidate.rs  memory_dedup.rs  memory_health.rs  memory_near_dup.rs  memory_orphan.rs  memory_scan.rs  memory_stale.rs  memory_supersede.rs  multi_scope.rs  plan6.rs  protocol_version.rs  recall_tuning.rs  recent_memories.rs  remember.rs  schema.rs  smoke.rs  spec_persistence.rs  suggest_links_tool.rs  traverse_multi_seed.rs
crates/topodb-mcp/tests/common/: mod.rs
crates/topodb-node/: .gitignore  Cargo.toml  index.d.ts  index.js  ops.js  package-lock.json  package.json
crates/topodb-node/__test__/: admin.test.mjs  feed.test.mjs  open.test.mjs  parity.test.mjs  reads.test.mjs  search.test.mjs  submit.test.mjs
crates/topodb-node/src/: convert.rs  errors.rs  feed.rs  lib.rs
crates/topodb-py/: Cargo.toml  build.rs  pyproject.toml
crates/topodb-py/python/topodb/: __init__.py  errors.py  ops.py
crates/topodb-py/src/: convert.rs  debug.rs  errors.rs  feed.rs  lib.rs
crates/topodb-py/tests/: test_admin.py  test_feed.py  test_open.py  test_parity.py  test_reads.py  test_search.py  test_submit.py
crates/topodb-sgh/: Cargo.toml
crates/topodb-sgh/src/: lib.rs
crates/topodb-sgh/src/executor/: mod.rs
crates/topodb-sgh/src/planner/: claude.rs  mock.rs  mod.rs
crates/topodb-sgh/src/recovery/: mod.rs
crates/topodb-sgh/src/replan/: mod.rs
crates/topodb-sgh/src/runner/: claude.rs  command.rs  mock.rs  mod.rs
crates/topodb-sgh/src/schema/: bound.rs  mod.rs  validate.rs
crates/topodb-sgh/src/store/: mod.rs  run.rs  supersede.rs
crates/topodb-sgh/tests/: bound.rs  claude_runner.rs  command_runner.rs  executor.rs  mock_runner.rs  planner.rs  properties.rs  recovery.rs  replan.rs  run_store.rs  schema.rs  supersede.rs  validate.rs
crates/topodb-sgh/tests/fixtures/: simple.yaml
crates/topodb/benches/: recall.rs  storage.rs
crates/topodb/src/: adj.rs  codec.rs  counters.rs  db.rs  dict.rs  disk.rs  error.rs  feed.rs  fts.rs  graph.rs  ids.rs  index.rs  lib.rs  migrate.rs  migrate_v3.rs  migrate_v4.rs  migrate_v6.rs  op.rs  ppr.rs  prop_index.rs  props.rs  read.rs  recall.rs  scopes.rs  slots.rs  state.rs  storage.rs  suggest.rs  validate.rs  vector.rs  vector_store.rs  workload.rs
crates/topodb/tests/: busy.rs  change_feed.rs  concurrency.rs  counters.rs  crash.rs  determinism.rs  differential.rs  duplicate_create_node.rs  edge_scope.rs  edges_from.rs  edges_to.rs  format_fixture.rs  generate_v2_workload.rs  generate_v3_workload.rs  hybrid_recall.rs  intern.rs  label_reads.rs  open_is_read_only.rs  open_stored.rs  prop_index.rs  query_edge_cases.rs  recall.rs  recall_graph_ppr.rs  recall_quality.rs  scope_isolation.rs  size_report.rs  suggest_links.rs  text_search.rs  traversal.rs  v2_workload_fixture.rs  v3_workload_fixture.rs  vector_search.rs
crates/topodb/tests/fixtures/: recall-corpus-src.json  recall-corpus.json  v1.redb  v2.redb  v3.redb  v4.redb  v5.redb  v6.redb
fixtures/parity/: README.md  basic-graph.json  search-and-recall.json  temporal-close.json
npm/topodb-mcp/: README.md  package.json
npm/topodb-mcp/test/: launcher.test.js
npm/topodb-pi/: .npmignore  README.md  SDK-FINDINGS.md  package-lock.json  package.json  tsconfig.json
npm/topodb-pi/spec/: episode-index-spec.json
npm/topodb-pi/src/: extension.ts  mcp-client.ts  policy.ts  recorder.ts  server-handle.ts
npm/topodb-pi/test/: extension-lifecycle.test.ts  extension-recorder.test.ts  extension.test.ts  mcp-client.test.ts  policy.test.ts  recorder-integration.test.ts  recorder.test.ts  server-handle.test.ts
plugins/claude-code/: .mcp.json  README.md  broker-client.js  broker.js  degraded.js  ipc.js  launch.js  package-lock.json  package.json  recorder.js  scope-id.js  server-args.js
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: recall.md  remember.md
plugins/claude-code/hooks/: hooks.json  post-tool-use.js  session-end.js  session-start.js
plugins/claude-code/skills/topodb-memory/: SKILL.md
plugins/claude-code/test/: broker-client.test.js  broker.test.js  capture.test.js  e2e.test.js  fsgrace.js  ipc.test.js  recorder.test.js  scope-id.test.js  server-args.test.js  session-start.test.js
plugins/sgh/: README.md
plugins/sgh/.claude-plugin/: plugin.json
plugins/sgh/commands/: plan.md  run.md
plugins/sgh/lib/: sgh-env.sh
plugins/sgh/test/: resolve.test.sh
scripts/: build-npm-packages.mjs  parity_cli.py  parity_lib.py
scripts/test/: build-npm-packages.test.mjs
specs/: 2026-07-10-claude-code-plugin-design.md  2026-07-11-p1-multi-scope-plan.md  2026-07-11-p1-tail-design.md  2026-07-11-p1-tail-plan.md
