[package]
name = "topodb-json"
version = "0.0.2"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "JSON conversion layer for the TopoDB agent-memory engine"
repository = "https://github.com/TopoDB/TopoDB"
readme = "README.md"
keywords = ["graph", "json", "serde", "database", "agent"]
categories = ["encoding", "database"]

# Library crate, no binary — exclude from cargo-dist releases so a future
# example/bench binary is never accidentally shipped.
[package.metadata.dist]
dist = false

[dependencies]
topodb = { path = "../topodb", version = "0.0.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
