[package]
name = "topodb-mcp"
version = "0.0.2"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "MCP server exposing the TopoDB agent-memory engine"
repository = "https://github.com/TopoDB/TopoDB"
readme = "README.md"
keywords = ["mcp", "agent", "memory", "graph", "database"]
categories = ["command-line-utilities", "database"]

[dependencies]
topodb = { path = "../topodb", version = "0.0.3" }
topodb-json = { path = "../topodb-json", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "2.2.0", features = ["server", "transport-io"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
schemars = "1.2.1"

[dev-dependencies]
tempfile = "3"
