[package]
name = "topodb-mcp"
version = "0.0.13"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "MCP server exposing the TopoDB agent-memory engine"
repository = "https://github.com/TopoDB/TopoDB"
readme = "README.md"
keywords = ["mcp", "agent", "memory", "graph", "database"]
categories = ["command-line-utilities", "database"]

[dependencies]
topodb = { path = "../topodb", version = "0.0.11" }
topodb-json = { path = "../topodb-json", version = "0.0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "2.2.0", features = ["server", "transport-io"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
schemars = "1.2.1"
fastembed = { version = "5.17.3", default-features = false, features = ["hf-hub-native-tls", "ort-load-dynamic"] }
libloading = "0.9"
sha2 = "0.11.0"
tar = "0.4.46"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tempfile = "3"
flate2 = "1.1.9"
ureq = { version = "3.3", default-features = false, features = ["native-tls"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic"] }

[dev-dependencies]
tempfile = "3"
