[package]
name = "topodb-py"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
name = "topodb_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py39", "extension-module"] }
pythonize = "0.23"
serde_json = "1"
crossbeam-channel = "0.5"
topodb = { path = "../topodb" }
topodb-json = { path = "../topodb-json" }
