[package]
name = "topodb-sgh"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Structured Graph Harness — frozen-DAG agent execution over TopoDB"

[dependencies]
topodb = { path = "../topodb", version = "0.0" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
jsonschema = "0.18"
thiserror = "1"
ulid = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
