[package]
name = "topodb"
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Embedded, local-first memory engine for AI agents: temporal property graph + scoped recall."
repository = "https://github.com/TopoDB/topodb"
readme = "README.md"
keywords = ["graph", "embedded", "database", "temporal", "agent"]
categories = ["database-implementations", "data-structures"]

[dependencies]
redb = "2"
ulid = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
smol_str = { version = "0.3", features = ["serde"] }
thiserror = "2"
crossbeam-channel = "0.5"
im = { version = "15", features = ["serde"] }
arc-swap = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
