[package]
name = "topodb"
version = "0.0.6"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Embedded, local-first memory engine for AI agents: temporal property graph + scoped recall."
repository = "https://github.com/TopoDB/TopoDB"
readme = "README.md"
keywords = ["graph", "embedded", "database", "temporal", "agent"]
categories = ["database-implementations", "data-structures"]

# Library crate, no binary — exclude from cargo-dist releases so a future
# example/bench binary is never accidentally shipped.
[package.metadata.dist]
dist = false

[dependencies]
redb = "2"
ulid = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
smol_str = { version = "0.3", features = ["serde"] }
thiserror = "2"
crossbeam-channel = "0.5"
lz4_flex = "0.11"

[dev-dependencies]
proptest = "1"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "recall"
harness = false

[[bench]]
name = "storage"
harness = false
